<resources>

    <string name="app_name">Snackiller用户端</string>
    <string name="showtext1">Snackiller</string>
    <string name="showtext2">专注凑单100年</string>
    <string name="showtext3">凑起的单可绕地球转360圈</string>
    <string name="headtext">我爱凑单</string>
    <string name="storebuybegintext">发起凑单</string>
    <string name="storebuyaddtext">加入</string>
    <string name="mynowbuytext">发起的凑单</string>
    <string name="mynowaddtext">参与的凑单</string>
    <string name="prepareorder">等待商家接单</string>
    <string name="querenorder">商家已接单</string>
    <string name="waittext">凑单等待时长</string>
    <string name="begin">开始凑单</string>
    <string name="cancel">取消</string>
    <string name="commit">退单</string>
    <string name="addition">继续购买</string>
    <string name="waiting">去跟单</string>
    <string name="totalshop">发起凑单</string>
    <string name="hisordertext">历史订单</string>
    <string name="myevalustore">我评价过的店铺</string>
    <string name="logout">注销登录</string>
    <string name="defaultorder">默认排序</string>
	<string name="mostbuy">买的最多</string>
	<string name="descend">价格从低到高</string>
	<string name="ascend">价格从高到低</string>
	<string name="mycoudan">我的凑单</string>
	<string name="faillogin">登录失败</string>
	<string name="successlogin">登录成功</string>
	<string name="nonephonenum">请输入手机号</string>
	<string name="nonepasswd">密码不能为空</string>
	<string name="logintext">立即登录</string>
	<string name="passwdnoconfirm">密码输入有误</string>
	<string name="failreg">注册失败</string>
	<string name="successreg">注册成功</string>
	<string name="persontext">个人中心</string>
	<string name="clicktosetnickname">点击设置昵称</string>
	<string name="failupdateuser">更新用户信息失败</string>
	<string name="successupdateuser">更新用户信息成功</string>
	<string name="failupdatebigfile">文件大小不能超过50KB</string>
	<string name="hintlogin">请输入手机号</string>
	<string name="hintloginpasswd">密码为6到20位字母数字组合</string>
	<string name="badnet">网络连接失败</string>
	<string name="nonephoto">图片已损坏或不存在</string>
	<string name="storegone">哇！老板带着商店去火星啦！</string>
	<string name="failgetgoodslist">没有更多了</string>
	<string name="uploadjpg">请上传jpg格式图片~</string>
	<string name="invalidphonenum">无效的手机号</string>
	<string name="passwdnotsame">密码不一致</string>
	<string name="passwdwrong">密码格式错误</string>
	<string name="usernamewrong">手机号格式错误</string>
	<string name="soft_update_no">您的软件已经是最新版本</string>
	<string name="soft_update_title">软件更新</string>
	<string name="soft_update_info">检测到新版本,立即更新吗?</string>
	<string name="soft_update_updatebtn">更新</string>
	<string name="soft_update_later">稍后更新</string>
	<string name="soft_updating">正在更新</string>
	<string name="soft_update_cancel">取消</string>
	<string name="mylisttext">我的凑单</string>
</resources>