<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/user_mainTopLayout"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:background="@color/head_yellow" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/headtext"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/user_mainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:background="@drawable/invitation_list" />
    </RelativeLayout>
        

    <TabHost
        android:id="@+id/user_mainTab_host"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/user_mainTopLayout" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:divider="@color/black" >
        </TabWidget>

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="43dp"
            android:background="@color/listback" >

            <ListView
                android:id="@+id/userTab_spec_first"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:divider="@color/listback"
                android:dividerHeight="10dp"
                android:listSelector="@color/listback" >
            </ListView>

            <ListView
                android:id="@+id/userTab_spec_second"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:divider="@color/listback"
                android:dividerHeight="10dp"
                android:listSelector="@color/listback" />
        </FrameLayout>
        
        <Button 
            android:id="@+id/clickRefresh"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="bottom|right"
            android:layout_margin="20dp"
            android:background="@drawable/refresh"/>
    </TabHost>

    <LinearLayout
        android:id="@+id/user_mainpageLayout2"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:layout_below="@id/user_mainTopLayout"
        android:visibility="gone">
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/slidebg">
            <RelativeLayout 
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">
                <ImageView 
                    android:id="@+id/user_mainpagePhoto"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/defaultman"
                    />
                <Button
                    android:id="@+id/user_mainpageLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/logintext"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@drawable/mainpagebuttonclick"
                    android:background="@android:color/transparent"
                    android:drawableRight="@drawable/arrowright"
                    
                    />
            </RelativeLayout>
            <View 
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/linecolor"/>

           <Button
                android:id="@+id/user_mainpage_gotobuy"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="去凑单"
                android:textSize="15sp"
                android:textColor="@drawable/mainpagebuttonclick"
                android:background="@android:color/transparent"
                android:drawableRight="@drawable/arrowright"
                
                />
            <View 
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/linecolor"/>
            
             <Button
                android:id="@+id/user_mainpage1"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="我的凑单"
                android:textSize="15sp"
                android:textColor="@drawable/mainpagebuttonclick"
                android:background="@android:color/transparent"
                android:drawableRight="@drawable/arrowright"
                
                />
            <View 
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/linecolor"/>
            
            <Button
                android:id="@+id/user_mainpage_versionupdate"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="检查版本更新"
                android:textSize="15sp"
                android:textColor="@drawable/mainpagebuttonclick"
                android:background="@android:color/transparent"
                android:drawableRight="@drawable/arrowright"
                
                />
            <View 
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/linecolor"/>
            <Button
                android:id="@+id/user_prepare_order"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:textColor="@drawable/mainpagebuttonclick"
                android:background="@android:color/transparent"
                android:text="@string/prepareorder"
                android:drawableRight="@drawable/arrowright"
                android:visibility="gone"
                />
            <View 
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/linecolor"
                android:visibility="gone"/>
            <Button
                android:id="@+id/user_queren_order"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:textColor="@drawable/mainpagebuttonclick"
                android:background="@android:color/transparent"
                android:text="@string/querenorder"
                android:drawableRight="@drawable/arrowright"
                android:visibility="gone"
                />
            <View 
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/linecolor"
                android:visibility="gone"/>
            <Button
                android:id="@+id/user_mainpage2"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:textColor="@drawable/mainpagebuttonclick"
                android:background="@android:color/transparent"
                android:text="@string/hisordertext"
                android:drawableRight="@drawable/arrowright"
                android:visibility="gone"
                />
            <View 
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/linecolor"
                android:visibility="gone"/>
            <Button
                android:id="@+id/user_mainpage3"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:textColor="@drawable/mainpagebuttonclick"
                android:background="@android:color/transparent"
                android:text="@string/myevalustore"
                android:drawableRight="@drawable/arrowright"
                android:visibility="gone"
                />
            <View 
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/linecolor"
                android:visibility="gone"/>
            <Button
                android:id="@+id/user_mainpage4"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:textColor="@drawable/mainpagebuttonclick"
                android:background="@android:color/transparent"
                android:text="@string/logout"
                android:drawableRight="@drawable/arrowright"

                />
            <View 
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/linecolor"
          />

        </LinearLayout>
        <LinearLayout
            	android:id="@+id/user_mainpageLayoutRight"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:orientation="horizontal"
        		android:background="@drawable/shadow">
        </LinearLayout>
    </LinearLayout>
    
</RelativeLayout>