<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/background"
                android:orientation="vertical" >
    <RelativeLayout
            android:id="@+id/centerheader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FF8500"
            android:orientation="horizontal"
            android:layout_weight="1">


        <TextView

                android:id="@+id/customerLoginTop"
                android:layout_width="fill_parent"
                android:layout_height="55dip"
                android:background="#FF8500"
                android:text="@string/persontext"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20dip"
                android:enabled="false"
                />

        <Button
                android:id="@+id/retButtonIndividual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/retbutton"
                android:background="@android:color/transparent"
                />
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/centerbody"
            android:layout_below="@id/centerheader"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/indctrtop">
        <ImageView
                android:layout_centerHorizontal="true"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="80dp"
                android:id="@+id/portrait"
                android:src="@drawable/defaultman"
                android:background="@android:color/transparent"
                />
        <EditText
                android:id="@+id/nickname"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/portrait"
                android:layout_marginTop="10dp"
                android:textColor="@color/bottomGray"
                android:textSize="20sp"
                android:enabled="false"
                android:singleLine="true"
                android:background="@android:color/transparent"
                />
        <EditText
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nickname"
                android:layout_marginBottom="50dp"
                android:textColor="@color/gray"
                android:textSize="10sp"
                android:enabled="false"
                android:singleLine="true"
                android:text="点击头像进行编辑"
                android:background="@android:color/transparent"
                />
        <Button
            android:id="@+id/editNickButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@id/nickname"
                android:layout_below="@id/portrait"
                android:drawableLeft="@drawable/editbtn2"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                android:visibility="gone"
                />
        <ImageView
                android:layout_centerHorizontal="true"
                android:layout_below="@id/nickname"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:id="@+id/straightline"
                android:layout_marginTop="3dp"
                android:background="@color/silver"
                android:visibility="invisible"
                />
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/straightline"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:visibility="invisible"
                >
            <Button
                    android:id="@+id/myfriend"
                    android:text="5\n好友"
                    android:textColor="@color/dimgray"
                    android:textSize="15dp"
                    android:lineSpacingExtra="5dp"
                    android:layout_width="fill_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_weight="1"
                    />
            <Button
                    android:id="@+id/myfollow"
                    android:text="5\n关注"
                    android:textColor="@color/dimgray"
                    android:textSize="15dp"
                    android:lineSpacingExtra="5dp"
                    android:layout_width="fill_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_weight="1"/>
            <Button
                    android:id="@+id/myfan"
                    android:text="1\n粉丝"
                    android:textColor="@color/dimgray"
                    android:textSize="15dp"
                    android:lineSpacingExtra="5dp"
                    android:layout_width="fill_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_weight="1"/>
            <Button
                    android:id="@+id/myscore"
                    android:text="100\n积分"
                    android:textColor="@color/dimgray"
                    android:textSize="15dp"
                    android:lineSpacingExtra="5dp"
                    android:layout_width="fill_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_weight="1"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/centerbody"
            android:id="@+id/centerbottom"
            android:visibility="invisible"
            >
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="#F4F4F4"
                android:orientation="vertical"
                >
            <Button
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:id="@+id/activelist"
                    android:text="@string/mynowaddtext"
                    android:textColor="@color/darkgray"
                    android:textSize="15dp"
                    android:layout_width="fill_parent"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:background="@drawable/slidebar2"
                    android:layout_weight="1"/>
            <ImageView
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:id="@+id/straightline2"
                    android:background="@color/silver"
                    android:visibility="invisible"
                    />
            <Button
                    android:id="@+id/historylist"
                    android:text="@string/hisordertext"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:textColor="@color/darkgray"
                    android:textSize="15dp"
                    android:layout_width="fill_parent"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:background="@drawable/slidebar2"
                    android:layout_weight="1"
                    android:visibility="invisible"/>
            <ImageView
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:id="@+id/straightline3"
                    android:background="@color/silver"
                    android:visibility="invisible"
                    />
            <Button
                    android:id="@+id/historyshop"
                    android:text="@string/myevalustore"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="80dp"
                    android:textColor="@color/darkgray"
                    android:textSize="15dp"
                    android:layout_width="fill_parent"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:background="@drawable/slidebar2"
                    android:layout_weight="1"
                    android:visibility="invisible"/>


                </LinearLayout>

            </RelativeLayout>


</RelativeLayout>